Fix webhook sample